fixed layout on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -64,3 +64,6 @@
 #darkmode .checkbox:checked + .label .ball {
     transform: translateX(17px);
 }
+
+@media screen and (min-width: 1024px) {
+}
